--- a/HAMS OR Challenge.ipynb
+++ b/HAMS OR Challenge.ipynb
@@ -29,6 +29,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For test we will consider paid-social as a campaign  and will evaluate the result"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -228,7 +235,7 @@
     }
    ],
    "source": [
-    "#loading test data. For test we will consider paid-social as a campaign that we ran and will evaluate the result\n",
+    "#loading test data. \n",
     "df_cust_journey_train_paid_social = df_cust_journey_train[(df_cust_journey_train.channel_label == 'paid-social' )].groupby(['conversion_id']).agg({'conversion':'sum'})\n",
     "userid = []\n",
     "#Selecting records with conversion\n",
